Closed Bug 185951 Opened 23 years ago Closed 23 years ago

nsBox returns bad PRBools

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sfraser_bugs, Assigned: sfraser_bugs)

References

()

Details

Attachments

(1 file)

nsBox::IsDirty and friends can return PRBools that have bits other than the low bit set: http://lxr.mozilla.org/seamonkey/source/layout/xul/base/src/nsBox.cpp#260 This is evil.
Attachment #109625 - Flags: superreview?(kin)
Attachment #109625 - Flags: review?(jkeiser)
Status: NEW → ASSIGNED
Comment on attachment 109625 [details] [diff] [review] Fix returned booleans to have the low bit set r+sr=kin@netscape.com Go ahead and check this in.
Attachment #109625 - Flags: superreview?(kin)
Attachment #109625 - Flags: superreview+
Attachment #109625 - Flags: review?(jkeiser)
Attachment #109625 - Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: