Fix booleans returned by nsBox to have the low bit set. Bug 185951. r/sr=kin